--- a/requirements.txt
+++ b/requirements.txt
@@ -1,187 +1,179 @@
-anndata==0.7.8
-anndata2ri==1.0.6
-annoy==1.17.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asn1crypto==0.24.0
-async-generator==1.10
-atomicwrites==1.1.5
-attrs==21.4.0
-Automat==0.6.0
-autopep8==1.6.0
-awscli==1.18.69
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-bbknn==1.5.1
-bleach==4.1.0
-botocore==1.16.19
-cached-property==1.5.2
-certifi==2018.1.18
-cffi==1.15.0
-chardet==3.0.4
-click==6.7
-click-log==0.2.1
-click-threading==0.4.4
-colorama==0.4.4
-command-not-found==0.3
-commonmark==0.9.1
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.1.4
-cycler==0.11.0
-Cython==0.29.26
-dataclasses==0.8
-decorator==4.4.2
-defusedxml==0.7.1
-distro-info===0.18ubuntu0.18.04.1
-docutils==0.14
-entrypoints==0.3
-et-xmlfile==1.1.0
-fail2ban==0.10.2
-future==0.18.3
-geomloss==0.2.6
-get_version==2.1
-h5py==3.1.0
-httplib2==0.9.2
-hyperlink==17.3.1
-idna==2.6
-igraph==0.9.9
-importlib-metadata==4.8.3
-importlib-resources==5.4.0
-incremental==16.10.1
-iotop==0.6
-ipykernel==5.5.6
-ipython==7.16.3
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-jedi==0.17.2
-Jinja2==3.0.3
-jmespath==0.9.3
-joblib==1.1.0
-jsonschema==4.0.0
-jupyter==1.0.0
-jupyter-client==7.1.0
-jupyter-console==6.4.0
-jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-KDEpy==1.1.0
-keyring==10.6.0
-keyrings.alt==3.0
-kiwisolver==1.3.1
-language-selector==0.1
-legacy-api-wrap==1.2
-leidenalg==0.8.8
-lion-pytorch==0.1.2
-llvmlite==0.36.0
-MarkupSafe==2.0.1
-matplotlib==3.3.4
-mistune==0.8.4
-natsort==8.0.2
-nbclient==0.5.9
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.4
-netifaces==0.10.4
-networkx==2.5.1
-notebook==6.4.6
-numba==0.53.1
-numexpr==2.8.1
-numpy==1.19.5
-olefile==0.45.1
-openpyxl==3.0.9
-packaging==21.3
-PAM==0.4.2
-pandas==1.1.5
-pandocfilters==1.5.0
-parso==0.7.1
-patsy==0.5.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.4.0
-prodigyopt==1.0
-prometheus-client==0.12.0
-prompt-toolkit==3.0.24
-ptyprocess==0.7.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycodestyle==2.8.0
-pycparser==2.21
-pycrypto==2.6.1
-pycurl==7.43.0.1
-Pygments==2.11.1
-PyGObject==3.26.1
-pyinotify==0.9.6
-pynndescent==0.5.5
-pyOpenSSL==17.5.0
-pyparsing==3.0.6
-pyrsistent==0.18.0
-pyserial==3.4
-pyswarms==1.3.0
-python-apt==1.6.5+ubuntu0.4
-python-dateutil==2.8.2
-python-debian==0.1.32
-python-igraph==0.9.9
-pytz==2021.3
-pytz-deprecation-shim==0.1.0.post0
-pyxdg==0.25
-PyYAML==6.0
-pyzmq==22.3.0
-qtconsole==5.2.2
-QtPy==2.0.0
-requests==2.18.4
-requests-toolbelt==0.8.0
-requests-unixsocket==0.1.5
-rich==10.14.0
-roman==2.0.0
-rpy2==3.4.5
-rsa==3.4.2
-s3transfer==0.3.3
-scanpy==1.7.2
-scikit-learn==0.24.2
-scikit-misc==0.1.4
-scipy==1.5.4
-scour==0.36
-screen-resolution-extra==0.0.0
-seaborn==0.11.2
-SecretStorage==2.3.1
-semantic-version==2.8.5
-Send2Trash==1.8.0
-service-identity==16.0.0
-sinfo==0.3.4
-six==1.16.0
-sparselinear==0.0.5
-ssh-import-id==5.7
-statsmodels==0.12.2
-stdlib-list==0.8.0
-systemd-python==234
-tables==3.7.0
-terminado==0.12.1
-testpath==0.5.0
-texttable==1.6.4
-threadpoolctl==3.0.0
-toml==0.10.2
-torch==1.10.1
-torchaudio==0.10.1
-torchvision==0.11.2
-tornado==6.1
-tqdm==4.62.3
-traitlets==4.3.3
-Twisted==17.9.0
-typing_extensions==4.0.1
-tzdata==2022.1
-tzlocal==4.2
-ufw==0.36
-umap-learn==0.5.2
-unattended-upgrades==0.1
-urllib3==1.22
-vboxapi==1.0
-vdirsyncer==0.16.2
-wcwidth==0.2.5
+absl-py==2.0.0
+adabelief-pytorch==0.2.1
+aiofiles @ file:///croot/aiofiles_1683773582346/work
+aiosqlite @ file:///croot/aiosqlite_1683773899903/work
+anndata==0.10.3
+annoy==1.17.3
+anyio @ file:///tmp/build/80754af9/anyio_1644481695334/work/dist
+appdirs==1.4.4
+argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
+argon2-cffi-bindings @ file:///tmp/build/80754af9/argon2-cffi-bindings_1644553347904/work
+array-api-compat==1.4
+attrs @ file:///croot/attrs_1668696182826/work
+Babel @ file:///croot/babel_1671781930836/work
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+beautifulsoup4 @ file:///croot/beautifulsoup4-split_1681493039619/work
+bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
+brotlipy==0.7.0
+captum==0.6.0
+certifi==2023.7.22
+cffi @ file:///tmp/abs_98z5h56wf8/croots/recipe/cffi_1659598650955/work
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+chex==0.1.84
+colorama==0.4.6
+colorcet==3.0.1
+contourpy==1.2.0
+cryptography @ file:///croot/cryptography_1677533068310/work
+cycler==0.12.1
+debugpy @ file:///home/builder/ci_310/debugpy_1640789504635/work
+decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+entrypoints @ file:///tmp/build/80754af9/entrypoints_1649908313000/work
+exceptiongroup==1.1.3
+faiss==1.7.4
+fastjsonschema @ file:///opt/conda/conda-bld/python-fastjsonschema_1661371079312/work
+filelock==3.9.0
+fonttools==4.44.0
+fsspec==2023.4.0
+h5py==3.10.0
+idna @ file:///croot/idna_1666125576474/work
+igraph==0.10.8
+imageio==2.32.0
+ipykernel @ file:///home/builder/ci_310/ipykernel_1640812194801/work/dist/ipykernel-6.4.1-py3-none-any.whl
+ipython @ file:///tmp/abs_94gruux8u8/croots/recipe/ipython_1659529858706/work
+ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+ipywidgets @ file:///croot/ipywidgets_1679394798311/work
+jax==0.4.20
+jaxlib==0.4.20
+jedi @ file:///tmp/build/80754af9/jedi_1644315229345/work
+Jinja2 @ file:///croot/jinja2_1666908132255/work
+joblib==1.3.2
+json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
+jsonschema @ file:///croot/jsonschema_1676558650973/work
+jupyter @ file:///tmp/abs_33h4eoipez/croots/recipe/jupyter_1659349046347/work
+jupyter-console @ file:///opt/conda/conda-bld/jupyter_console_1647002188872/work
+jupyter-contrib-core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_contrib_core_1657548529421/work
+jupyter-events @ file:///croot/jupyter_events_1684268042853/work
+jupyter-nbextensions-configurator @ file:///home/conda/feedstock_root/build_artifacts/jupyter_nbextensions_configurator_1670793770953/work
+jupyter-ydoc @ file:///croot/jupyter_ydoc_1683747223142/work
+jupyter_client @ file:///croot/jupyter_client_1676329080601/work
+jupyter_core @ file:///croot/jupyter_core_1679906564508/work
+jupyter_server @ file:///croot/jupyter_server_1686059464471/work
+jupyter_server_fileid @ file:///croot/jupyter_server_fileid_1684273577568/work
+jupyter_server_terminals @ file:///croot/jupyter_server_terminals_1686870725608/work
+jupyter_server_ydoc @ file:///croot/jupyter_server_ydoc_1686767404829/work
+jupyterlab @ file:///croot/jupyterlab_1686179668131/work
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+jupyterlab-widgets @ file:///croot/jupyterlab_widgets_1679055282532/work
+jupyterlab_server @ file:///croot/jupyterlab_server_1680792501448/work
+kiwisolver==1.4.5
+lazy_loader==0.3
+leidenalg==0.10.1
+lime==0.2.0.1
+llvmlite==0.41.1
+lxml @ file:///opt/conda/conda-bld/lxml_1657545139709/work
+markdown-it-py==3.0.0
+MarkupSafe @ file:///opt/conda/conda-bld/markupsafe_1654597864307/work
+matplotlib==3.8.1
+matplotlib-inline @ file:///opt/conda/conda-bld/matplotlib-inline_1662014470464/work
+mdurl==0.1.2
+mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1686313613819/work/dist
+mkl-fft==1.3.1
+mkl-random @ file:///home/builder/ci_310/mkl_random_1641843545607/work
+mkl-service==2.4.0
+ml-dtypes==0.3.1
+mpmath==1.3.0
+natsort==8.4.0
+nbclassic @ file:///croot/nbclassic_1681756170010/work
+nbclient @ file:///tmp/build/80754af9/nbclient_1650290238894/work
+nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert-meta_1687202153002/work
+nbformat @ file:///croot/nbformat_1670352325207/work
+nest-asyncio @ file:///croot/nest-asyncio_1672387112409/work
+networkx==3.0
+notebook @ file:///croot/notebook_1681756172480/work
+notebook_shim @ file:///croot/notebook-shim_1668160579331/work
+numba==0.58.1
+numpy @ file:///croot/numpy_and_numpy_base_1682520569166/work
+opt-einsum==3.3.0
+packaging @ file:///croot/packaging_1678965309396/work
+pandas==2.1.1
+pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
+param==2.0.0
+parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+patsy==0.5.3
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow==9.4.0
+platformdirs @ file:///opt/conda/conda-bld/platformdirs_1662711380096/work
+plottable==0.1.5
+ply==3.11
+pooch @ file:///tmp/build/80754af9/pooch_1623324770023/work
+prometheus-client @ file:///tmp/abs_d3zeliano1/croots/recipe/prometheus_client_1659455100375/work
+prompt-toolkit @ file:///croot/prompt-toolkit_1672387306916/work
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pyct==0.5.0
+Pygments @ file:///croot/pygments_1684279966437/work
+pynndescent==0.5.10
+pyOpenSSL @ file:///croot/pyopenssl_1677607685877/work
+pyparsing==3.1.1
+PyQt5-sip==12.11.0
+pyrsistent @ file:///home/builder/ci_310/pyrsistent_1640807196327/work
+PySocks @ file:///home/builder/ci_310/pysocks_1640793678128/work
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+python-igraph==0.10.8
+python-json-logger @ file:///croot/python-json-logger_1683823803357/work
+pytz @ file:///croot/pytz_1671697431263/work
+PyYAML @ file:///croot/pyyaml_1670514731622/work
+pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1666828497229/work
+qtconsole @ file:///croot/qtconsole_1681394213385/work
+QtPy @ file:///opt/conda/conda-bld/qtpy_1662014892439/work
+requests @ file:///croot/requests_1682607517574/work
+rfc3339-validator @ file:///croot/rfc3339-validator_1683077044675/work
+rfc3986-validator @ file:///croot/rfc3986-validator_1683058983515/work
+rich==13.6.0
+scanpy==1.9.3
+scib-metrics @ git+https://github.com/yoseflab/scib-metrics.git@34815bb6a7b12b42f81eaa52e65ed4ee15f5b9a4
+scikit-image==0.22.0
+scikit-learn==1.3.2
+scikit-misc==0.3.0
+scipy==1.10.1
+seaborn==0.13.0
+Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
+session-info==1.0.0
+sip @ file:///tmp/abs_44cd77b_pu/croots/recipe/sip_1659012365470/work
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+sniffio @ file:///home/builder/ci_310/sniffio_1640794799774/work
+soupsieve @ file:///croot/soupsieve_1680518478486/work
+statsmodels==0.14.0
+stdlib-list==0.9.0
+sympy==1.12
+tabulate==0.9.0
+tbb==2021.10.0
+terminado @ file:///croot/terminado_1671751832461/work
+texttable==1.7.0
+threadpoolctl==3.2.0
+tifffile==2023.9.26
+tinycss2 @ file:///croot/tinycss2_1668168815555/work
+toml @ file:///tmp/build/80754af9/toml_1616166611790/work
+tomli @ file:///opt/conda/conda-bld/tomli_1657175507142/work
+toolz==0.12.0
+torch==2.1.0+cu121
+torch-scatter @ file:///usr/share/miniconda/envs/test/conda-bld/pytorch-scatter_1678969598125/work
+torch-sparse @ file:///usr/share/miniconda/envs/test/conda-bld/pytorch-sparse_1679136244071/work
+torchaudio==2.1.0+cu121
+torchvision==0.16.0+cu121
+tornado @ file:///opt/conda/conda-bld/tornado_1662061693373/work
+tqdm==4.66.1
+traitlets @ file:///croot/traitlets_1671143879854/work
+triton==2.1.0
+typing_extensions @ file:///croot/typing_extensions_1686601443660/work
+tzdata==2023.3
+umap-learn==0.5.4
+urllib3 @ file:///croot/urllib3_1686163155763/work
+wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
 webencodings==0.5.1
-widgetsnbextension==3.5.2
-xkit==0.0.0
-xlrd==1.2.0
-yapf==0.32.0
-zipp==3.6.0
-zope.interface==4.3.2
+websocket-client @ file:///home/builder/ci_310/websocket-client_1640795866898/work
+widgetsnbextension @ file:///croot/widgetsnbextension_1679313860248/work
+y-py @ file:///croot/y-py_1683555143488/work
+ypy-websocket @ file:///croot/ypy-websocket_1684171737040/work
