--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ cycler==0.12.1
 debugpy @ file:///home/builder/ci_310/debugpy_1640789504635/work
 decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
 defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+dog-optimizer==1.0.3
 entrypoints @ file:///tmp/build/80754af9/entrypoints_1649908313000/work
 exceptiongroup==1.1.3
 faiss==1.7.4
@@ -123,6 +124,7 @@ PySocks @ file:///home/builder/ci_310/pysocks_1640793678128/work
 python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
 python-igraph==0.10.8
 python-json-logger @ file:///croot/python-json-logger_1683823803357/work
+pytorch_optimizer==2.12.0
 pytz @ file:///croot/pytz_1671697431263/work
 PyYAML @ file:///croot/pyyaml_1670514731622/work
 pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1666828497229/work
