--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 absl-py==2.0.0
 adabelief-pytorch==0.2.1
 aiofiles @ file:///croot/aiofiles_1683773582346/work
+aiohttp==3.8.6
+aiosignal==1.3.1
 aiosqlite @ file:///croot/aiosqlite_1683773899903/work
 anndata==0.10.3
 annoy==1.17.3
@@ -9,47 +11,77 @@ appdirs==1.4.4
 argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
 argon2-cffi-bindings @ file:///tmp/build/80754af9/argon2-cffi-bindings_1644553347904/work
 array-api-compat==1.4
+arrow==1.3.0
+async-timeout==4.0.3
 attrs @ file:///croot/attrs_1668696182826/work
 Babel @ file:///croot/babel_1671781930836/work
 backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
 beautifulsoup4 @ file:///croot/beautifulsoup4-split_1681493039619/work
 bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
+bokeh==3.3.0
 brotlipy==0.7.0
+cachetools==5.3.2
 captum==0.6.0
 certifi==2023.7.22
 cffi @ file:///tmp/abs_98z5h56wf8/croots/recipe/cffi_1659598650955/work
 charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
 chex==0.1.84
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+cloudpickle==3.0.0
 colorama==0.4.6
 colorcet==3.0.1
 contourpy==1.2.0
 cryptography @ file:///croot/cryptography_1677533068310/work
+cucim==23.10.0
+cuda-python==12.3.0
+cudf-cu12==23.10.0
+cugraph-cu12==23.10.0
+cuml-cu12==23.10.0
+cuproj-cu12==23.10.0
+cuspatial-cu12==23.10.0
+cuxfilter-cu12==23.10.0
 cycler==0.12.1
+dask==2023.9.2
+dask-cuda==23.10.0
+dask-cudf-cu12==23.10.0
+datashader==0.16.0
 debugpy @ file:///home/builder/ci_310/debugpy_1640789504635/work
 decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
 defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+distributed==2023.9.2
 dog-optimizer==1.0.3
 entrypoints @ file:///tmp/build/80754af9/entrypoints_1649908313000/work
 exceptiongroup==1.1.3
 faiss==1.7.4
 fastjsonschema @ file:///opt/conda/conda-bld/python-fastjsonschema_1661371079312/work
+fastrlock==0.8.2
 filelock==3.9.0
+fiona==1.9.5
 fonttools==4.44.0
+fqdn==1.5.1
+frozenlist==1.4.0
 fsspec==2023.4.0
+geopandas==0.14.0
 h5py==3.10.0
+holoviews==1.18.0
 idna @ file:///croot/idna_1666125576474/work
 igraph==0.10.8
 imageio==2.32.0
+importlib-metadata==6.8.0
 ipykernel @ file:///home/builder/ci_310/ipykernel_1640812194801/work/dist/ipykernel-6.4.1-py3-none-any.whl
 ipython @ file:///tmp/abs_94gruux8u8/croots/recipe/ipython_1659529858706/work
 ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
 ipywidgets @ file:///croot/ipywidgets_1679394798311/work
+isoduration==20.11.0
 jax==0.4.20
-jaxlib==0.4.20
+jaxlib==0.4.20+cuda12.cudnn89
 jedi @ file:///tmp/build/80754af9/jedi_1644315229345/work
 Jinja2 @ file:///croot/jinja2_1666908132255/work
 joblib==1.3.2
 json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
+jsonpointer==2.4
 jsonschema @ file:///croot/jsonschema_1676558650973/work
 jupyter @ file:///tmp/abs_33h4eoipez/croots/recipe/jupyter_1659349046347/work
 jupyter-console @ file:///opt/conda/conda-bld/jupyter_console_1647002188872/work
@@ -61,6 +93,7 @@ jupyter_client @ file:///croot/jupyter_client_1676329080601/work
 jupyter_core @ file:///croot/jupyter_core_1679906564508/work
 jupyter_server @ file:///croot/jupyter_server_1686059464471/work
 jupyter_server_fileid @ file:///croot/jupyter_server_fileid_1684273577568/work
+jupyter_server_proxy==4.1.0
 jupyter_server_terminals @ file:///croot/jupyter_server_terminals_1686870725608/work
 jupyter_server_ydoc @ file:///croot/jupyter_server_ydoc_1686767404829/work
 jupyterlab @ file:///croot/jupyterlab_1686179668131/work
@@ -71,12 +104,16 @@ kiwisolver==1.4.5
 lazy_loader==0.3
 leidenalg==0.10.1
 lime==0.2.0.1
-llvmlite==0.41.1
+linkify-it-py==2.0.2
+llvmlite==0.40.1
+locket==1.0.0
 lxml @ file:///opt/conda/conda-bld/lxml_1657545139709/work
+Markdown==3.5.1
 markdown-it-py==3.0.0
 MarkupSafe @ file:///opt/conda/conda-bld/markupsafe_1654597864307/work
 matplotlib==3.8.1
 matplotlib-inline @ file:///opt/conda/conda-bld/matplotlib-inline_1662014470464/work
+mdit-py-plugins==0.4.0
 mdurl==0.1.2
 mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1686313613819/work/dist
 mkl-fft==1.3.1
@@ -84,6 +121,9 @@ mkl-random @ file:///home/builder/ci_310/mkl_random_1641843545607/work
 mkl-service==2.4.0
 ml-dtypes==0.3.1
 mpmath==1.3.0
+msgpack==1.0.7
+multidict==6.0.4
+multipledispatch==1.0.0
 natsort==8.4.0
 nbclassic @ file:///croot/nbclassic_1681756170010/work
 nbclient @ file:///tmp/build/80754af9/nbclient_1650290238894/work
@@ -93,14 +133,28 @@ nest-asyncio @ file:///croot/nest-asyncio_1672387112409/work
 networkx==3.0
 notebook @ file:///croot/notebook_1681756172480/work
 notebook_shim @ file:///croot/notebook-shim_1668160579331/work
-numba==0.58.1
+numba==0.57.1
 numpy @ file:///croot/numpy_and_numpy_base_1682520569166/work
+nvidia-cublas-cu12==12.3.2.9
+nvidia-cuda-cupti-cu12==12.3.52
+nvidia-cuda-nvcc-cu12==12.3.52
+nvidia-cuda-nvrtc-cu12==12.3.52
+nvidia-cuda-runtime-cu12==12.3.52
+nvidia-cudnn-cu12==8.9.6.50
+nvidia-cufft-cu12==11.0.11.19
+nvidia-cusolver-cu12==11.5.3.52
+nvidia-cusparse-cu12==12.1.3.153
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.3.52
+nvtx==0.2.8
 opt-einsum==3.3.0
 packaging @ file:///croot/packaging_1678965309396/work
-pandas==2.1.1
+pandas==1.5.3
 pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
+panel==1.3.1
 param==2.0.0
 parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+partd==1.4.1
 patsy==0.5.3
 pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
 pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
@@ -111,13 +165,20 @@ ply==3.11
 pooch @ file:///tmp/build/80754af9/pooch_1623324770023/work
 prometheus-client @ file:///tmp/abs_d3zeliano1/croots/recipe/prometheus_client_1659455100375/work
 prompt-toolkit @ file:///croot/prompt-toolkit_1672387306916/work
+protobuf==4.25.0
+psutil==5.9.6
 ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pyarrow==12.0.1
 pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
 pyct==0.5.0
 Pygments @ file:///croot/pygments_1684279966437/work
+pylibcugraph-cu12==23.10.0
+pylibraft-cu12==23.10.0
 pynndescent==0.5.10
+pynvml==11.4.1
 pyOpenSSL @ file:///croot/pyopenssl_1677607685877/work
 pyparsing==3.1.1
+pyproj==3.6.1
 PyQt5-sip==12.11.0
 pyrsistent @ file:///home/builder/ci_310/pyrsistent_1640807196327/work
 PySocks @ file:///home/builder/ci_310/pysocks_1640793678128/work
@@ -126,14 +187,17 @@ python-igraph==0.10.8
 python-json-logger @ file:///croot/python-json-logger_1683823803357/work
 pytorch_optimizer==2.12.0
 pytz @ file:///croot/pytz_1671697431263/work
+pyviz_comms==3.0.0
 PyYAML @ file:///croot/pyyaml_1670514731622/work
 pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1666828497229/work
 qtconsole @ file:///croot/qtconsole_1681394213385/work
 QtPy @ file:///opt/conda/conda-bld/qtpy_1662014892439/work
+raft-dask-cu12==23.10.0
 requests @ file:///croot/requests_1682607517574/work
 rfc3339-validator @ file:///croot/rfc3339-validator_1683077044675/work
 rfc3986-validator @ file:///croot/rfc3986-validator_1683058983515/work
 rich==13.6.0
+rmm-cu12==23.10.0
 scanpy==1.9.3
 scib-metrics @ git+https://github.com/yoseflab/scib-metrics.git@34815bb6a7b12b42f81eaa52e65ed4ee15f5b9a4
 scikit-image==0.22.0
@@ -143,15 +207,19 @@ scipy==1.10.1
 seaborn==0.13.0
 Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
 session-info==1.0.0
+shapely==2.0.2
+simpervisor==1.0.0
 sip @ file:///tmp/abs_44cd77b_pu/croots/recipe/sip_1659012365470/work
 six @ file:///tmp/build/80754af9/six_1644875935023/work
 sniffio @ file:///home/builder/ci_310/sniffio_1640794799774/work
+sortedcontainers==2.4.0
 soupsieve @ file:///croot/soupsieve_1680518478486/work
 statsmodels==0.14.0
 stdlib-list==0.9.0
 sympy==1.12
 tabulate==0.9.0
 tbb==2021.10.0
+tblib==3.0.0
 terminado @ file:///croot/terminado_1671751832461/work
 texttable==1.7.0
 threadpoolctl==3.2.0
@@ -168,14 +236,26 @@ torchvision==0.16.0+cu121
 tornado @ file:///opt/conda/conda-bld/tornado_1662061693373/work
 tqdm==4.66.1
 traitlets @ file:///croot/traitlets_1671143879854/work
+treelite==3.9.1
+treelite-runtime==3.9.1
 triton==2.1.0
+types-python-dateutil==2.8.19.14
 typing_extensions @ file:///croot/typing_extensions_1686601443660/work
 tzdata==2023.3
+uc-micro-py==1.0.2
+ucx-py-cu12==0.34.0
 umap-learn==0.5.4
+uri-template==1.3.0
 urllib3 @ file:///croot/urllib3_1686163155763/work
 wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+webcolors==1.13
 webencodings==0.5.1
 websocket-client @ file:///home/builder/ci_310/websocket-client_1640795866898/work
 widgetsnbextension @ file:///croot/widgetsnbextension_1679313860248/work
+xarray==2023.10.1
+xyzservices==2023.10.1
 y-py @ file:///croot/y-py_1683555143488/work
+yarl==1.9.2
 ypy-websocket @ file:///croot/ypy-websocket_1684171737040/work
+zict==3.0.0
+zipp==3.17.0
